--- a/src/Bridges/Tracy/PanelTemplate.latte
+++ b/src/Bridges/Tracy/PanelTemplate.latte
@@ -8,7 +8,10 @@
         <tr n:foreach="$link as $title => $url">
             {if is_array($url)}
                 <td>
-                    <a {ifset $url['target']}target="{$url['target']}"{/ifset} href="{ifset $url['url']}{$url['url']}{else}{link $url['link']}{/ifset}">{$title}</a>
+                    <a
+                            {ifset $url['target']}target="{$url['target']}"{/ifset}
+                            {ifset $url['confirm']}onclick="return confirm({$url['confirm']});"{/ifset}
+                            href="{ifset $url['url']}{$url['url']}{else}{link $url['link']}{/ifset}">{$title}</a>
                 </td>
             {else}
                 <td><a href="{$url}">{$title}</a></td>
