--- a/src/Bridges/Tracy/PanelTemplate.latte
+++ b/src/Bridges/Tracy/PanelTemplate.latte
@@ -4,6 +4,7 @@
         <caption>Links</caption>
         <tr n:ifset="$InternalTracyClean">
             <td><a href="{$InternalTracyClean}">Clean nette cache</a></td>
+            <td><a href="{$InternalDisableDebug}" onclick="return confirm('Disable debug?');">Disable debug</a></td>
         </tr>
         <tr n:foreach="$link as $title => $url">
             {if is_array($url)}
