update call error

--- a/src/Bridges/Tracy/PanelTemplate.latte
+++ b/src/Bridges/Tracy/PanelTemplate.latte
@@ -9,7 +9,7 @@
             <td><a href="{$InternalDisableDebug}" onclick="return confirm('Disable debug?');">Disable debug</a></td>
         </tr>
         <tr n:ifset="$InternalServerError">
-            <td><a href="{$InternalServerError}" onclick="return confirm('Server error?');">Server error</a></td>
+            <td><a href="{$InternalServerError}" onclick="return confirm('Disable debug & server error?');">Server error</a></td>
         </tr>
         <tr n:foreach="$link as $title => $url">
             {if is_array($url)}
