--- a/src/Bridges/Tracy/PanelTemplate.latte
+++ b/src/Bridges/Tracy/PanelTemplate.latte
@@ -1,7 +1,9 @@
 <h1>Tracy clean</h1>
-<div class="tracy-inner">
+<div class="tracy-inner-container">
     <table>
-        <caption>Links</caption>
+        <tr>
+            <th>Links</th>
+        </tr>
         <tr n:ifset="$InternalTracyClean">
             <td><a href="{$InternalTracyClean}">Clean cache</a></td>
         </tr>
