--- a/src/Bridges/Tracy/PanelTemplate.latte
+++ b/src/Bridges/Tracy/PanelTemplate.latte
@@ -1,5 +1,5 @@
 <h1>Tracy clean</h1>
-<div class="tracy-inner-container">
+<div class="tracy-inner">
     <table>
         <tr>
             <th>Links</th>
